internal/runtime/compiler/parser/y.output

state 0
	$accept: .start $end 
	stmt_list: .    (2)

	.  reduce 2 (src line 98)

	stmt_list  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  stmt_list.    (1)
	stmt_list:  stmt_list.stmt 
	mark_pos: .    (121)
	metric_hide_spec: .    (93)

	$end  reduce 1 (src line 90)
	INVALID  shift 13
	COUNTER  reduce 93 (src line 519)
	GAUGE  reduce 93 (src line 519)
	TIMER  reduce 93 (src line 519)
	TEXT  reduce 93 (src line 519)
	HISTOGRAM  reduce 93 (src line 519)
	CONST  shift 11
	HIDDEN  shift 23
	NEXT  shift 10
	STOP  shift 12
	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	NL  shift 16
	.  reduce 121 (src line 689)

	stmt  goto 3
	conditional_stmt  goto 4
	conditional_expr  goto 14
	expr_stmt  goto 5
	expr  goto 17
	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 22
	unary_expr  goto 27
	assign_expr  goto 21
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 20
	indexed_expr  goto 32
	id_expr  goto 41
	concat_expr  goto 24
	pattern_expr  goto 19
	metric_declaration  goto 6
	decorator_declaration  goto 7
	decoration_stmt  goto 8
	regex_pattern  goto 29
	match_expr  goto 26
	delete_stmt  goto 9
	builtin_expr  goto 33
	metric_hide_spec  goto 18
	mark_pos  goto 15

state 3
	stmt_list:  stmt_list stmt.    (3)

	.  reduce 3 (src line 103)


state 4
	stmt:  conditional_stmt.    (4)

	.  reduce 4 (src line 113)


state 5
	stmt:  expr_stmt.    (5)

	.  reduce 5 (src line 116)


state 6
	stmt:  metric_declaration.    (6)

	.  reduce 6 (src line 118)


state 7
	stmt:  decorator_declaration.    (7)

	.  reduce 7 (src line 120)


state 8
	stmt:  decoration_stmt.    (8)

	.  reduce 8 (src line 122)


state 9
	stmt:  delete_stmt.    (9)

	.  reduce 9 (src line 124)


state 10
	stmt:  NEXT.    (10)

	.  reduce 10 (src line 126)


state 11
	stmt:  CONST.id_expr concat_expr 

	ID  shift 43
	.  error

	id_expr  goto 45

state 12
	stmt:  STOP.    (12)

	.  reduce 12 (src line 134)


state 13
	stmt:  INVALID.    (13)

	.  reduce 13 (src line 138)


state 14
	conditional_stmt:  conditional_expr.compound_stmt ELSE compound_stmt 
	conditional_stmt:  conditional_expr.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 46

state 15
	conditional_stmt:  mark_pos.OTHERWISE compound_stmt 
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 
	decorator_declaration:  mark_pos.DEF ID compound_stmt 
	decoration_stmt:  mark_pos.DECO compound_stmt 
	delete_stmt:  mark_pos.DEL postfix_expr AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos.DEL postfix_expr 

	DEF  shift 51
	DEL  shift 53
	OTHERWISE  shift 48
	BUILTIN  shift 49
	DECO  shift 52
	DIV  shift 50
	.  error


state 16
	expr_stmt:  NL.    (20)

	.  reduce 20 (src line 183)


state 17
	expr_stmt:  expr.NL 

	NL  shift 54
	.  error


state 18
	metric_declaration:  metric_hide_spec.metric_type_spec metric_decl_attr_spec 

	COUNTER  shift 56
	GAUGE  shift 57
	TIMER  shift 58
	TEXT  shift 59
	HISTOGRAM  shift 60
	.  error

	metric_type_spec  goto 55

state 19
	conditional_expr:  pattern_expr.    (17)
	conditional_expr:  pattern_expr.logical_op opt_nl logical_expr 

	AND  shift 62
	OR  shift 63
	.  reduce 17 (src line 165)

	logical_op  goto 61

state 20
	conditional_expr:  logical_expr.    (19)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 62
	OR  shift 63
	.  reduce 19 (src line 178)

	logical_op  goto 64

state 21
	expr:  assign_expr.    (23)

	.  reduce 23 (src line 199)


state 22
	expr:  postfix_expr.    (24)
	unary_expr:  postfix_expr.    (68)
	postfix_expr:  postfix_expr.postfix_op 

	INC  shift 66
	DEC  shift 67
	NL  reduce 24 (src line 202)
	.  reduce 68 (src line 383)

	postfix_op  goto 65

state 23
	metric_hide_spec:  HIDDEN.    (94)

	.  reduce 94 (src line 524)


state 24
	pattern_expr:  concat_expr.    (58)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 68
	.  reduce 58 (src line 340)


state 25
	logical_expr:  bitwise_expr.    (27)
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 

	BITAND  shift 70
	XOR  shift 72
	BITOR  shift 71
	.  reduce 27 (src line 219)

	bitwise_op  goto 69

state 26
	logical_expr:  match_expr.    (28)

	.  reduce 28 (src line 222)


state 27
	assign_expr:  unary_expr.ASSIGN opt_nl logical_expr 
	assign_expr:  unary_expr.ADD_ASSIGN opt_nl logical_expr 
	multiplicative_expr:  unary_expr.    (62)

	ADD_ASSIGN  shift 74
	ASSIGN  shift 73
	.  reduce 62 (src line 362)


state 28
	match_expr:  primary_expr.match_op opt_nl pattern_expr 
	match_expr:  primary_expr.match_op opt_nl primary_expr 
	postfix_expr:  primary_expr.    (70)

	MATCH  shift 76
	NOT_MATCH  shift 77
	.  reduce 70 (src line 393)

	match_op  goto 75

state 29
	concat_expr:  regex_pattern.    (59)

	.  reduce 59 (src line 348)


state 30
	bitwise_expr:  rel_expr.    (33)
	rel_expr:  rel_expr.rel_op opt_nl shift_expr 

	LT  shift 79
	GT  shift 80
	LE  shift 81
	GE  shift 82
	EQ  shift 83
	NE  shift 84
	.  reduce 33 (src line 242)

	rel_op  goto 78

state 31
	unary_expr:  NOT.unary_expr 
	mark_pos: .    (121)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 121 (src line 689)

	primary_expr  goto 87
	postfix_expr  goto 86
	unary_expr  goto 85
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 32
	primary_expr:  indexed_expr.    (74)
	indexed_expr:  indexed_expr.LSQUARE arg_expr_list RSQUARE 

	LSQUARE  shift 89
	.  reduce 74 (src line 410)


state 33
	primary_expr:  builtin_expr.    (75)

	.  reduce 75 (src line 413)


state 34
	primary_expr:  CAPREF.    (76)

	.  reduce 76 (src line 415)


state 35
	primary_expr:  CAPREF_NAMED.    (77)

	.  reduce 77 (src line 419)


state 36
	primary_expr:  STRING.    (78)

	.  reduce 78 (src line 423)


state 37
	primary_expr:  LPAREN.logical_expr RPAREN 
	mark_pos: .    (121)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 121 (src line 689)

	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 90
	indexed_expr  goto 32
	id_expr  goto 41
	match_expr  goto 26
	builtin_expr  goto 33
	mark_pos  goto 88

state 38
	primary_expr:  INTLITERAL.    (80)

	.  reduce 80 (src line 431)


state 39
	primary_expr:  FLOATLITERAL.    (81)

	.  reduce 81 (src line 435)


state 40
	rel_expr:  shift_expr.    (38)
	shift_expr:  shift_expr.shift_op opt_nl additive_expr 

	SHL  shift 93
	SHR  shift 94
	.  reduce 38 (src line 261)

	shift_op  goto 92

state 41
	indexed_expr:  id_expr.    (82)

	.  reduce 82 (src line 442)


state 42
	shift_expr:  additive_expr.    (46)
	additive_expr:  additive_expr.add_op opt_nl multiplicative_expr 

	MINUS  shift 97
	PLUS  shift 96
	.  reduce 46 (src line 286)

	add_op  goto 95

state 43
	id_expr:  ID.    (84)

	.  reduce 84 (src line 458)


state 44
	additive_expr:  multiplicative_expr.    (50)
	multiplicative_expr:  multiplicative_expr.mul_op opt_nl unary_expr 

	DIV  shift 100
	MOD  shift 101
	MUL  shift 99
	POW  shift 102
	.  reduce 50 (src line 303)

	mul_op  goto 98

state 45
	stmt:  CONST id_expr.concat_expr 
	mark_pos: .    (121)

	.  reduce 121 (src line 689)

	concat_expr  goto 103
	regex_pattern  goto 29
	mark_pos  goto 104

state 46
	conditional_stmt:  conditional_expr compound_stmt.ELSE compound_stmt 
	conditional_stmt:  conditional_expr compound_stmt.    (15)

	ELSE  shift 105
	.  reduce 15 (src line 150)


state 47
	compound_stmt:  LCURLY.stmt_list RCURLY 
	stmt_list: .    (2)

	.  reduce 2 (src line 98)

	stmt_list  goto 106

state 48
	conditional_stmt:  mark_pos OTHERWISE.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 107

state 49
	builtin_expr:  mark_pos BUILTIN.LPAREN RPAREN 
	builtin_expr:  mark_pos BUILTIN.LPAREN arg_expr_list RPAREN 

	LPAREN  shift 108
	.  error


state 50
	regex_pattern:  mark_pos DIV.in_regex REGEX DIV 
	in_regex: .    (122)

	.  reduce 122 (src line 699)

	in_regex  goto 109

state 51
	decorator_declaration:  mark_pos DEF.ID compound_stmt 

	ID  shift 110
	.  error


state 52
	decoration_stmt:  mark_pos DECO.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 111

state 53
	delete_stmt:  mark_pos DEL.postfix_expr AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos DEL.postfix_expr 
	mark_pos: .    (121)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	LPAREN  shift 37
	.  reduce 121 (src line 689)

	primary_expr  goto 87
	postfix_expr  goto 112
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 54
	expr_stmt:  expr NL.    (21)

	.  reduce 21 (src line 186)


state 55
	metric_declaration:  metric_hide_spec metric_type_spec.metric_decl_attr_spec 

	STRING  shift 116
	ID  shift 115
	.  error

	metric_decl_attr_spec  goto 113
	metric_name_spec  goto 114

state 56
	metric_type_spec:  COUNTER.    (101)

	.  reduce 101 (src line 566)


state 57
	metric_type_spec:  GAUGE.    (102)

	.  reduce 102 (src line 571)


state 58
	metric_type_spec:  TIMER.    (103)

	.  reduce 103 (src line 575)


state 59
	metric_type_spec:  TEXT.    (104)

	.  reduce 104 (src line 579)


state 60
	metric_type_spec:  HISTOGRAM.    (105)

	.  reduce 105 (src line 583)


state 61
	conditional_expr:  pattern_expr logical_op.opt_nl logical_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 117

state 62
	logical_op:  AND.    (31)

	.  reduce 31 (src line 234)


state 63
	logical_op:  OR.    (32)

	.  reduce 32 (src line 237)


state 64
	logical_expr:  logical_expr logical_op.opt_nl bitwise_expr 
	logical_expr:  logical_expr logical_op.opt_nl match_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 119

state 65
	postfix_expr:  postfix_expr postfix_op.    (71)

	.  reduce 71 (src line 396)


state 66
	postfix_op:  INC.    (72)

	.  reduce 72 (src line 402)


state 67
	postfix_op:  DEC.    (73)

	.  reduce 73 (src line 405)


state 68
	concat_expr:  concat_expr PLUS.opt_nl regex_pattern 
	concat_expr:  concat_expr PLUS.opt_nl id_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 120

state 69
	bitwise_expr:  bitwise_expr bitwise_op.opt_nl rel_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 121

state 70
	bitwise_op:  BITAND.    (35)

	.  reduce 35 (src line 251)


state 71
	bitwise_op:  BITOR.    (36)

	.  reduce 36 (src line 254)


state 72
	bitwise_op:  XOR.    (37)

	.  reduce 37 (src line 256)


state 73
	assign_expr:  unary_expr ASSIGN.opt_nl logical_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 122

state 74
	assign_expr:  unary_expr ADD_ASSIGN.opt_nl logical_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 123

state 75
	match_expr:  primary_expr match_op.opt_nl pattern_expr 
	match_expr:  primary_expr match_op.opt_nl primary_expr 
	opt_nl: .    (123)

	NL  shift 118
	.  reduce 123 (src line 709)

	opt_nl  goto 124

state 76
	match_op:  MATCH.    (56)

	.  reduce 56 (src line 331)


state 77
	match_op:  NOT_MATCH.    (57)

	.  reduce 57 (src line 334)

